--- a/HolidaysSite/Views/Shared/_HolidayLayout.cshtml
+++ b/HolidaysSite/Views/Shared/_HolidayLayout.cshtml
@@ -1,5 +1,4 @@
-﻿@using StackExchange.Profiling
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -27,24 +26,23 @@
                     @RenderBody()
                 </div>
             </div>
-                </div>
-                <div class="col-sm-1 col-md-1 col-lg-1"></div>
-            </div>  <!-- wraper -->
+        </div>
+        <div class="col-sm-1 col-md-1 col-lg-1"></div>
+    </div>  <!-- wraper -->
 
-            <div class="footer-wrap">
-                <!-- Footer starts -->
-                <div class="copyright"> © 2017 Happy Together, Все права защищены</div>
-                <div class="social-links">
-                    <a class="btn btn-social btn-lg btn-vk" target="_blank" href="https://vk.com/alya.shetelya"><span class="fa fa-vk"></span></a>
-                    <a class="btn btn-social btn-lg btn-facebook" target="_blank" href="https://www.facebook.com/groups/949671818462817/"><span class="fa fa-facebook"></span></a>
-                   
-                </div>
-                <div class="developer">Разработчик © 2017 <a target="_blank" href="#">FutureSoftWare</a></div>
-            </div> <!-- Footer ends -->
+    <div class="footer-wrap">
+        <!-- Footer starts -->
+        <div class="copyright"> © 2017 Happy Together, Все права защищены</div>
+        <div class="social-links">
+            <a class="btn btn-social btn-lg btn-vk" target="_blank" href="https://vk.com/alya.shetelya"><span class="fa fa-vk"></span></a>
+            <a class="btn btn-social btn-lg btn-facebook" target="_blank" href="https://www.facebook.com/groups/949671818462817/"><span class="fa fa-facebook"></span></a>
+            @*<a class="btn btn-social btn-lg btn-instagram" target="_blank" href="https://instagram.com/BurjKhalifa"><span class="fa fa-instagram"></span></a>*@
+        </div>
+        <div class="developer">Разработчик © 2017 <a target="_blank" href="#">FutureSoftWare</a></div>
+    </div> <!-- Footer ends -->
 
-            @Scripts.Render("~/bundles/jquery")
-            @Scripts.Render("~/bundles/bootstrap")
-            @RenderSection("scripts", required: false)
-    @*@MiniProfiler.RenderIncludes()*@
-    </body>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
+</body>
 </html>
